# ICS4U-2020-21

./: .gitignore  CMakeLists.txt  README.md  Tui.cpp  Tui.h  jtextprocessors.cpp  jtextprocessors.h  ktextprocessors.cpp  ktextprocessors.h  main.cpp  textprocessors.cpp  textprocessors.h
.github/: CODEOWNERS
.github/workflows/: cmake.yml
